version/0.14/_sources/api/ansys/additive/core/thermal_history/ThermalHistorySummary.rst.txt




ThermalHistorySummary
=====================

.. py:class:: ThermalHistorySummary(input: ThermalHistoryInput, coax_ave_output_folder: str)
   :canonical: ansys.additive.core.thermal_history.ThermalHistorySummary




Summary of a thermal history simulation.












Overview
--------
.. py:currentmodule:: ThermalHistorySummary
.. tab-set::




    .. tab-item:: Properties

        .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~input`
            - Simulation input.
          * - :py:attr:`~coax_ave_output_folder`
            - Path to the folder containing the coaxial average sensor results.






Import detail
-------------

.. code-block:: python

    from ansys.additive.core.thermal_history import ThermalHistorySummary


Property detail
---------------
.. py:property:: input
   :canonical: ansys.additive.core.thermal_history.ThermalHistorySummary.input
   :type: None


   
   Simulation input.

   For more information, see the :class:`ThermalHistoryInput` class.















   ..
       !! processed by numpydoc !!

.. py:property:: coax_ave_output_folder
   :canonical: ansys.additive.core.thermal_history.ThermalHistorySummary.coax_ave_output_folder
   :type: None


   
   Path to the folder containing the coaxial average sensor results.
















   ..
       !! processed by numpydoc !!





